proxies/envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901
static_resources:
  listeners:
  - name: listener_1
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: service_plain_http
          http_filters:
          - name: envoy.router
      tls_context:
        common_tls_context:
          tls_certificates:
            certificate_chain: { "filename": "/home/certs/self.cert" }
            private_key: { "filename": "/home/certs/self.key" }
          alpn_protocols: h2,http/1.1
  clusters:
  - name: service_plain_http
    connect_timeout: 2s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    hosts:
      - socket_address:
          address: plain-http
          port_value: 80
